--- a/cover/capp/static/c.html
+++ b/cover/capp/static/c.html
@@ -66,7 +66,7 @@
 <body>
   <div class="book-cover">
     <div>
-      <div class="title"><b>LOT OF THE FILES</b></i></div>
+      <div class="title"><b>LORD OF THE FILES</b></i></div>
       <div class="line"></div>
       <div class="subtitle">BRITISH SCHOOLBOYS STANDARD ON THE DESERTED ISLAND AFTER PLANE CRASH</div>
     </div>
